hphp/hack/test/typecheck/dynamic/mixed_isnt_dynamic/return.php
<?hh // strict

function foo(dynamic $x): mixed {
  return $x;
}

function bar(mixed $x): dynamic {
  return $x;
}
